# mcp-design2gui

./: CMakeLists.txt  README.md  build.sh
.github/workflows/: release.yml
src/: CMakeLists.txt  main.cpp
